# rag-notebook

./: .gitignore  README.md  _config.yaml  app.py  celery-worker.Dockerfile  docker-compose.yml  index.md  make_celery.py  pyproject.toml
_posts/: 2024-12-08-first-post.md
server/: application.py  extensions.py
server/lib/: document_service.py
server/migrations/: 1733510289_document_model.py  1733516500_add_vector_column.py  1733519488_break_vectors_into_chunks.py
server/models/: document.py
server/templates/: base.jinja2
server/views/cli/: views.py
server/views/graphql/: schema.graphql  views.py
server/views/main/: views.py
server/views/main/templates/main/: index.jinja2
vite/: .eslintrc.cjs  .gitignore  codegen.ts  main.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
vite/src/: App.tsx  main.tsx
vite/src/components/: FileUpload.tsx  Search.tsx
vite/src/context/: AppContext.tsx
