[tool.poetry]
name = "rag-playground"
version = "0.1.0"
description = ""
authors = ["Erik Wiffin <erik.wiffin@gmail.com>"]
readme = "README.md"
packages = [
    {include = "server"}
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-vite = "^0.3.7"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.1"
arrow = "^1.3.0"
furl = "^2.1.3"
pyyaml = "^6.0.1"
black = "^24.3.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.28"
flask-alembic = "^3.0.1"
celery = "^5.3.6"
redis = "^5.0.3"
ariadne = "^0.23.0"
pypdf = "^5.1.0"
openai = "^1.57.0"
pgvector = "^0.3.6"
sentence-transformers = "^3.3.1"
tiktoken = "^0.8.0"
langfuse = "^2.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
